# evo-ai

./: .firebaserc  .gitignore  README.md
.claude/: settings.local.json
.firebase/: hosting.cHVibGlj.cache
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
ai-service/: .env.example  Dockerfile  pyproject.toml
ai-service/app/: main.py
ai-service/app/api/: agent.py  chat.py  documents.py  image.py  vision.py  voice.py
ai-service/app/core/: config.py  langfuse_client.py
ai-service/app/services/: agent_service.py  langfuse_client.py  vision_service.py  voice_service.py
ai-service/app/services/agent/: graph.py
ai-service/app/services/image/: image_service.py
ai-service/app/services/llm/: chat_service.py
ai-service/app/services/memory/: memory_service.py
ai-service/app/services/rag/: document_service.py
client/: .env.example  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
client/src/: App.tsx
client/src/hooks/: useChat.ts
client/src/services/: api.ts
client/src/stores/: authStore.ts  chatStore.ts
client/src/styles/: index.css
client/src/types/: chat.ts
docker/: docker-compose.yml
docs/: ARCHITECTURE.md
public/: index.html
public/assets/: index-3da9zBoS.js  index-C47CxbR_.css
scripts/: setup.sh
server/: .env.example  Dockerfile  package-lock.json  package.json
server/src/: index.ts
server/src/config/: database.ts  index.ts  redis.ts
server/src/controllers/: agentController.ts  authController.ts  chatController.ts  (+5 more)
storage/: raft_state.json
(+37 files in other folders)
