[project]
name = "evo-ai-service"
version = "0.1.0"
description = "Evo AI Platform — Python AI Microservice"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.1.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-groq>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "qdrant-client>=1.11.0",
    "redis>=5.0.0",
    "pymupdf>=1.24.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "langgraph>=0.1.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.6.0"]
voice = ["openai-whisper>=20231117", "soundfile>=0.12.0"]
image-gen = ["diffusers>=0.22.0", "transformers>=4.35.0", "torch>=2.0.0", "accelerate>=0.25.0"]

[tool.ruff]
target-version = "py311"
line-length = 100
